# nextdialog

./: .gitignore  LICENSE  PHILOSOPHY.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
docs/internal/: BRAND.md  FEATURES.md  nextdialog-brief.md  nextdialog-build-plan.md
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  telemetry.rs
src-tauri/src/agents/: claude_code.rs  cursor_agent.rs  gemini_cli.rs  generic.rs  mod.rs
src-tauri/src/clipboard/: bridge.rs
src-tauri/src/hooks/: config.rs  manager.rs  mod.rs  payloads.rs  port_pool.rs  processor.rs  server.rs
src-tauri/src/intelligence/: mod.rs  provider.rs
src-tauri/src/pty/: activity.rs  mod.rs  pool.rs
src-tauri/src/session/: config.rs  file_tracker.rs  manager.rs  mod.rs  tuning.rs  tuning_discovery.rs  tuning_files.rs  tuning_profiles.rs  types.rs
src-tauri/src/status/: detector.rs
src-tauri/src/timeline/: ledger.rs
src/components/: AppBackground.tsx  AttentionIndicator.tsx  ConfigureModal.tsx  ContextMenu.tsx  FeedbackModal.tsx  HomeView.tsx  NewSessionModal.tsx  SessionCard.tsx  SessionDock.tsx  SessionTimeline.tsx  SessionTypeIcon.tsx  SettingsView.tsx  ShiftingGradient.tsx  Sparkline.tsx  StatusDot.tsx  TerminalOverlay.tsx  TerminalPane.tsx  Toggle.tsx  TokenBurnBar.tsx  TuningPanel.tsx
src/context/: SessionContext.tsx
src/hooks/: useStatus.ts  (+9 more)
(+10 files in other folders)
