[package]
name = "nextdialog"
version = "0.2.2"
description = "Multi-session Claude Code terminal manager"
authors = ["Brian Cline"]
edition = "2021"

[lib]
name = "nextdialog_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
arboard = "3"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
strip-ansi-escapes = "0.2"
chrono = { version = "0.4", features = ["serde"] }
png = "0.17"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
tiny_http = "0.12"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
